# spz

./: .clang-format  .codacy.yml  .editorconfig  .gitignore  .mailmap  .markdownlint.json  .markdownlint.yml  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  AUTHORS.md  CITATION.cff  CODEOWNERS  Cargo.toml  Criterion.toml  Dockerfile  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  codecov.yml  deny.toml  justfile  licenserc.toml  ruff.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.claude/skills/async-python-patterns/: source.txt
.claude/skills/code_quality/: source.txt
.claude/skills/docker-containerization/: source.txt
.claude/skills/python-performance-optimization/: source.txt
.claude/skills/python-testing-patterns/: source.txt
.claude/skills/rust-developer/: source.txt
.claude/skills/rust-engineer/: source.txt
.devcontainer/: devcontainer.json  post_create_cmd.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  codecov.yml  codspeed.yml  committed.yml  issue-triage-agent.md  license.yml  pages.yml  pull_request.yml  pypi_publish.yml  python.yml  python_ci.yml  rust_ci.yml  spelling.yml  workflow.yml
.github/workflows/shared/: reporting.md
LICENSES/: Apache-2.0.txt  MIT.txt
benches/: lib.rs  util.rs
benches/benchmarks/: load.rs
book/: book.toml
capnproto/schemas/: spz.capnp
crates/bevy_spz/: Cargo.toml  README.md
crates/bevy_spz/src/: asset.rs  lib.rs
crates/pyspz/: Cargo.toml  pyproject.toml
crates/pyspz/examples/: example.py
crates/pyspz/py/: spz.pyi
crates/pyspz/pypkg/spz/: __init__.py  context_managers.py  spz.pyi
crates/pyspz/src/: lib.rs
crates/spz/: Cargo.toml
crates/spz-binding-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/spz-binding-c/examples/: example.c
crates/spz-binding-c/include/: spz.h
crates/spz-binding-c/src/: lib.rs
crates/spz-binding-python/: Cargo.toml  pyproject.toml
crates/spz-binding-python/dev/: shell_prefill.py
crates/spz-binding-python/examples/: example.py
crates/spz-binding-python/pypkg/spz/: __init__.py  _context_managers.py  _spz.pyi
crates/spz-binding-python/pypkg/tests/: test_spz.py
crates/spz-binding-python/src/: binding.rs  lib.rs  wrapper.rs
crates/spz-capi/: Cargo.toml  build.rs  cbindgen.toml
crates/spz-capi/src/: lib.rs
crates/spz-capnproto-rust/: Cargo.toml  README.md  REAMDE.md  build.rs
crates/spz-capnproto-rust/src/: convert.rs  lib.rs
crates/spz-cli/: Cargo.toml
crates/spz-cli/benches/: allocator_default.rs  allocator_mimalloc.rs
crates/spz-cli/benches/benchmarks/: allocator.rs  mod.rs
crates/spz-cli/src/: main.rs
crates/spz-pywrapper/: Cargo.toml
crates/spz-pywrapper/examples/: example.py
crates/spz-pywrapper/pypkg/spz/: __init__.py  context_managers.py  spz.pyi
crates/spz-pywrapper/pypkg/tests/: util.py
crates/spz-pywrapper/src/: lib.rs  wrapper.rs
crates/spz-pywrapper/tests/: test_spz.py
crates/spz/benches/: main.rs  util.rs
crates/spz/benches/benchmarks/: load.rs  mod.rs  print_info.rs  save.rs
crates/spz/benches/util/: mod.rs
crates/spz/examples/: load_spz.rs
crates/spz/src/: compression.rs  consts.rs  coord.rs  errors.rs  gaussian_splat.rs  header.rs  lib.rs  math.rs  mmap.rs  packed.rs  unpacked.rs
crates/spz/tests/: test.rs
docs/: SPEC.md  SPZ_SPEC_v3.md  SPZ_to_PLY_COMPARISION.md
flatpak/: cargo-sources.json  io.github.jackneill.spz.metainfo.xml  org.jackneill.spz.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compression.rs  coord.rs  header.rs  packed.rs  splat.rs
snap/: snapcraft.yaml
src/: consts.rs  coord.rs  gaussian_cloud.rs  gaussian_splat.rs  gaussians.rs  header.rs  lib.rs  math.rs  mmap.rs  packed.rs  types.rs  util.rs
tests/: test.rs  util.rs
