[workspace]
members = [
	"crates/spz",
	"crates/spz-binding-python",
	"crates/spz-binding-c",
	"crates/bevy_spz",
	"fuzz",
]
resolver = "3"

[profile.release]
opt-level = 3
debug = 2
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false

[profile.dev]
incremental = true
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
