[workspace]
members = [
	"crates/spz",
	"crates/spz-binding-python",
	"crates/spz-binding-c",
	"crates/spz-capnproto-rust",
	"crates/bevy_spz",
	"fuzz",
]
resolver = "3"

[profile.release]
codegen-units = 1
opt-level = 3
debug = 2
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false

[profile.dev]
incremental = true
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
