[package]
name = "bevy_spz"
version = "0.0.1"
edition = "2024"
authors = ["See AUTHORS.md"]
description = """SPZ file format handling for Bevy."""
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Jackneill/spz"
repository = "https://github.com/Jackneill/spz"
readme = "README.md"
keywords = [
	"bevy",
	"gaussian-splatting",
	"point-cloud",
	"graphics",
	"rendering",
]
categories = [
	"graphics",
	"game-development",
	"rendering",
	"rendering::data-formats",
]
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
spz = { path = "../spz", default-features = false, features = [] }

bevy = { version = "0.18", default-features = false, features = [
	"bevy_asset",
	"bevy_render",
] }
thiserror = { version = "2.0", default-features = false, features = [] }
anyhow = { version = "1.0", default-features = false, features = [] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
