[package]
name = "spz-capnproto"
version = "0.0.1"
edition = "2024"
authors = ["See AUTHORS.md"]
description = """Cap'n Proto (capnproto) Rust integration for the SPZ file format."""
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Jackneill/spz"
repository = "https://github.com/Jackneill/spz"
readme = "README.md"
keywords = ["gaussian-splatting", "point-cloud", "capnproto", "rpc", "graphics"]
categories = [
	"graphics",
	"game-development",
	"rendering",
	"rendering::data-formats",
	"parsing",
]
publish = true

build = "build.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
capnp = { version = "0.25", default-features = true, features = [] }
likely_stable = { version = "0.1", default-features = true, features = [] }

[dev-dependencies]

[build-dependencies]
anyhow = { version = "1.0", default-features = true, features = [] }
capnpc = { version = "0.25", default-features = true, features = [] }
