[package]
name = "spz"
version = "0.0.7"
edition = "2024"
authors = ["See AUTHORS.md"]
description = """SPZ file format handling for Rust."""
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Jackneill/spz"
repository = "https://github.com/Jackneill/spz"
readme = "../../README.md"
keywords = ["gaussian-splatting", "point-cloud", "3d", "graphics", "rendering"]
categories = [
	"graphics",
	"game-development",
	"rendering",
	"rendering::data-formats",
	"parsing",
]
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1.0", default-features = true, features = [] }
memmap2 = { version = "0.9", default-features = true, features = [] }
libc = { version = "0.2", default-features = true, features = [] }
flate2 = { version = "1.1", default-features = true, features = [] }
serde_json = { version = "1.0", default-features = true, features = [
	"float_roundtrip",
] }
serde = { version = "1.0", default-features = true, features = ["derive"] }
static_assertions = { version = "1.1", default-features = true, features = [] }
tokio = { version = "1.49", default-features = true, features = ["full"] }
likely_stable = { version = "0.1", default-features = false, features = [] }
arbitrary = { version = "1.4", default-features = true, features = ["derive"] }
bitflags = { version = "2.10", default-features = true, features = [] }
strum = { version = "0.27", default-features = true, features = ["derive"] }
ndarray = { version = "0.17", default-features = false, features = [] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = true, features = [
	"html_reports",
	"async_tokio",
] }
codspeed-criterion-compat = { version = "4.2.1", default-features = true, features = [
	"async",
	"async_tokio",
] }
rstest = { version = "0.26", default-features = true, features = [] }
approx = { version = "0.5", default-features = true, features = [] }
rand = { version = "0.10", default-features = true, features = [] }
bitflags = { version = "2.10", default-features = true, features = [
	"std",
	"serde",
	"arbitrary",
] }
plotters = { version = "0.3", default-features = false, features = [
	"svg_backend",
	"line_series",
	"point_series",
	"histogram",
] }
gltf-json = { version = "1.4", default-features = true, features = ["names"] }
base64 = { version = "0.22", default-features = true, features = [] }

[[bench]]
name = "spz_bench"
harness = false
path = "benches/main.rs"
